[package]
name = "clap_flags"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/clap_flags"
documentation = "https://docs.rs/clap_flags"
description = "Collection of reusable flags for Clap"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.4"
structopt = "0.3.8"
env_logger = "0.6.1"
pretty_env_logger = "0.3.0"

[dev-dependencies]
structopt = "0.3.8"
log = "0.4.3"
futures = "0.1.23"
paw-structopt = "1.0.0"
paw = "1.0.0"
runtime = "0.3.0-alpha.4"
tide = "0.2.0"
