[package]
name = "clap_flags"
version = "0.5.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/clap_flags"
documentation = "https://docs.rs/clap_flags"
description = "Collection of reusable flags for Clap"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.8"
structopt = "0.3.9"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"

[dev-dependencies]
structopt = "0.3.9"
log = "0.4.8"
futures = "0.3.4"
paw-structopt = "1.0.0"
paw = "1.0.0"
async-std = { version = "1.5.0", features = ["attributes"] }
tide = "0.6.0"
